# launcher

./: .gitignore  .lintstagedrc  .lintstagedrc.json  Dockerfile  README.md  biome.json  bun.lockb  components.json  index.html  lint-staged.config.js  lint-staged.config.ts  package.json  react-router.config.ts  tsconfig.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: combine-prs.yml  publish-release.yml
.husky/: pre-commit
app/: root.tsx  routes.ts
app/components/: create-instance.tsx  enter-animation.tsx  friend-list.tsx  notifications.tsx  search-bar.tsx  select-account.tsx  sidebar.tsx  skin-viewer.tsx  theme-toggle.tsx  title-bar.tsx
app/components/icons/: microsoft.tsx
app/components/icons/caption-buttons/: back.tsx  close.tsx  index.tsx  maximize.tsx  minimize.tsx  restore.tsx
app/components/icons/chrome/: back.tsx  close.tsx  index.ts  maximize.tsx  minimize.tsx  restore.tsx
app/components/title-bar-menu/: index.tsx  theme-toggle.tsx
app/components/ui/: alert-dialog.tsx  badge.tsx  button-group.tsx  button.tsx  card.tsx  checkbox.tsx  combobox.tsx  command.tsx  dialog.tsx  drawer.tsx  dropdown-menu.tsx  field.tsx  form.tsx  input-group.tsx  input.tsx  kbd.tsx  label.tsx  progress.tsx  scroll-area.tsx  select.tsx  separator.tsx  sheet.tsx  sidebar.tsx  skeleton.tsx  slider.tsx  sonner.tsx  switch.tsx  textarea.tsx  tooltip.tsx
app/hooks/: async-effect.ts  debounce.ts  os-information.ts  os-type.ts  player-skin.ts  storage.ts
app/hooks/matches/: breadcrumbs.ts
app/layouts/: settings.tsx  sidebar.tsx  title-bar.tsx
app/lib/: account.ts  file-system.ts  handle.ts  settings.ts
app/lib/bindings/: account.ts  instance.ts  msa-auth.ts  player-skin.ts  show-window.ts
app/lib/constants/: versions.ts
app/lib/types/: account.ts
app/providers/: account.tsx  accounts.tsx  app-window.tsx  breadcrumbs.tsx  game-options.tsx  index.tsx  instance.tsx  settings.tsx  sidebar.tsx  theme.tsx
app/routes/: instance.tsx  instances.tsx  launcher.tsx  settings.tsx  skins.tsx  splash-screen.tsx
app/routes/game-options/: layout.tsx  mods.tsx  version.tsx
app/routes/instances/: manage.tsx
app/routes/settings/: advanced.tsx  launcher.tsx  layout.tsx  notifications.tsx  preferences.tsx  resources.tsx  temp.tsx
app/styles/: app.css  minecraft.css  tailwind.css
src/: root.tsx
src-tauri/: .env  .gitignore  .lintstagedrc  .lintstagedrc.json  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  launcher.json  plugins.json  splash-screen.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: auth.rs  mod.rs  skin.rs  window.rs
src-tauri/src/core/: error.rs  mod.rs  msa_auth.rs  player_skin.rs
src-tauri/src/macos/: window_ext.rs
src-tauri/src/plugins/: account.rs  instance.rs
src-tauri/src/utils/: constants.rs  minecraft_auth.rs  mod.rs  window.rs
src/routes/: Launcher.tsx
