[package]
name = "launcher"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.1.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.8", features = ["json"] }
base64 = "0.22.1"
image = "0.25"
thiserror = "2.0.12"
chrono = { version = "0.4.31", features = ["serde"] }
url = "2.5.0"

tauri = { version = "2.4.0", features = [] }
tauri-plugin-log = "2.3.1"
tauri-plugin-single-instance = "2.2.2"
tauri-plugin-system-info = "2.0.9"
tauri-plugin-os = "2.2.1"
tauri-plugin-fs = "2.2.0"
tauri-plugin-window-state = "2.2.2"
tauri-plugin-dialog = "2.2.0"

minecraft-msa-auth = "0.4.0"
oauth2 = "5.0.0"


[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.26"
