[package]
name = "launcher"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4.28"
tauri-plugin-log = "2.2.0"
tauri-plugin-single-instance = "2.3.6"
tauri-plugin-window-state = "2.4.1"
reqwest = { version = "0.12.24", features = ["json"] }
oauth2 = { version = "5.0.0", features = ["reqwest"] }
anyhow = "1"
tokio = { version = "1", features = ["sync", "fs", "rt-multi-thread"] }
url = "2"
discord-rpc-client = "0.4.0"
image = "0.24"
base64 = "0.21"
futures = "0.3"
sha1 = "0.10"

